# clothes_classification

./: README.md  pyproject.toml
notebook/: clothes classification.ipynb
